Fixed navbar cutoff on landing

--- a/app/client/style.css
+++ b/app/client/style.css
@@ -9,6 +9,7 @@
   color: white;
   width: 100%;
   text-align: center;
+  z-index: -1;
 }
 
 .accent-block {
